actualizacion del proyecto